# Algorithm-Visualisation-System

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README_EN.md  README_RU.md
.github/workflows/: clang-tidy.yml
include/: Drawer.hpp  SceneManager.hpp
include/scenes/: IScene.hpp
include/scenes/algo_handler/: AlgoHandler.hpp  AlgorithmHelpers.hpp  IAlgoObject.hpp  IVisualizedAlgorithm.hpp
include/scenes/algo_handler/algorithms/: AlgoUtilities.hpp  BubbleSort.hpp  PossibleAlgos.hpp  SelectionSort.hpp
include/scenes/menu/: RunetimeMenu.hpp
include/utilities/: DataBundle.hpp  Parser.hpp
src/: main.cpp
src/scenes/algo_handler/: AlgoHandler.cpp  AlgorithmHelpers.cpp  IAlgoObject.cpp
src/scenes/algo_handler/algorithms/: AlgoUtilities.cpp  BubbleSort.cpp  PossibleAlgos.cpp
src/utilities/: Parser.cpp
